fixed z-index

--- a/assets/src/styles/pages/_monitoring-location.scss
+++ b/assets/src/styles/pages/_monitoring-location.scss
@@ -54,7 +54,7 @@ table {
   @include u-bg('blue-60v');
   position: sticky;
   bottom: 0;
-  z-index: 99;
+  z-index: 2001;
   @include u-padding-top(1);
   @include u-padding-bottom(1);
   a {
